Fix z-index values

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ html {
 }
 
 .polaroid {
+  transition: all 500ms linear;
   margin: 0;
   padding: 10px;
   width: 250px;
@@ -33,24 +34,25 @@ html {
 left: 20%;
 top: 100px;
 transform: rotate(10deg);
-z-index: 2000;
+z-index: 1;
 }
 
 .polaroid:nth-child(2) {
 left: 30%;
 top: 150px;
 transform: rotate(5deg);
-z-index: 3;
+z-index: 2000;
 }
 
 .polaroid:last-child {
 left: 40%;
 top: 100px;
-z-index: 2;
+z-index: 100;
 }
 
 .polaroid:hover {
   box-shadow: 4px 16px 24px rgba(0, 0, 0, 0.75);
+  z-index: 3000;
 }
 
 .polaroid:last-child:hover {
